src/objects/Monitoring_Assessment__c.object
<CustomObject>
    <description>Monitoring of awards.</description>
    <fields>
        <fullName>Assessment_Cycle_Date__c</fullName>
        <label>Assessment Cycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Number__c</fullName>
        <label>Assessment Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <formula>Grant__r.Corporate_Program1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <formula>Grant__r.Organization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_GO_Completed__c</fullName>
        <label>Date GO Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <formula>Grant__r.Organization__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Officer__c</fullName>
        <formula>Grant__r.Grants_Officer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Officer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant #</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Monitoring Assessments</relationshipLabel>
        <relationshipName>Monitoring_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Monitoring_Assessment_ID__c</fullName>
        <label>Legacy Monitoring Assessment ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Fiscal_Year__c</fullName>
        <inlineHelpText>Enter a 4 number year (i.e. 2015)</inlineHelpText>
        <label>Monitoring Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_City__c</fullName>
        <formula>Grant__r.Organization__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>Grant__r.Organization_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_State__c</fullName>
        <formula>Text (Grant__r.Organization__r.States__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Monitoring_Considerations__c</fullName>
        <label>Other Monitoring Considerations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <label>Priority Level</label>
        <picklist>
            <picklistValues>
                <fullName>High - 150+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium  80-149</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low 0-79</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Officer__c</fullName>
        <formula>Grant__r.Program_Officer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Officer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <description>Changed the Formula field from (Grant__r.Master_Award__r.Project_Name__r.City__c) to the current one.</description>
        <formula>Grant__r.Application_ID__r.Project__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <description>Formula field changed from (Text (Grant__r.Master_Award__r.Project_Name__r.State__c)) to the current one.</description>
        <formula>Text ( Grant__r.Application_ID__r.Project__r.State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assessment In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO Assessment Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO/PO Assessment Complete (VISTA only)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Monitoring Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assessment_Number__c</columns>
        <columns>Grant__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Monitoring_Fiscal_Year__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Monitoring Assessment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitoring Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assesment_Number_Cannot_be_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Assessment_Number__c &lt;= 0, True, False)</errorConditionFormula>
        <errorDisplayField>Assessment_Number__c</errorDisplayField>
        <errorMessage>Assessment Number Must be grater than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monitoring_Fiscal_Year</fullName>
        <active>true</active>
        <description>Requires 4 characters in the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>LEN(TRIM(Monitoring_Fiscal_Year__c))&lt;4</errorConditionFormula>
        <errorDisplayField>Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Enter a 4 digit year (i.e. 2015)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monitoring_Fiscal_Year_Number_Only</fullName>
        <active>true</active>
        <description>Requires only numbers entered into the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>NOT(ISNUMBER(Monitoring_Fiscal_Year__c ))</errorConditionFormula>
        <errorDisplayField>Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Only enter numbers into the Monitoring Fiscal Year field.</errorMessage>
    </validationRules>
</CustomObject>